--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,24 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      InAppBrowser
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <!-- Browser URL -->
+  <ion-item>
+    <ion-label position="floating">Browser URL</ion-label>
+    <ion-input [(ngModel)] = "urls.browserUrl"> </ion-input>
+  </ion-item>
+
+  <!-- Target URL -->
+  <ion-item>
+    <ion-label position="floating">Target URL</ion-label>
+    <ion-input [(ngModel)] = "urls.targetUrl"> </ion-input>
+  </ion-item>
+
+  <ion-button expand="full" (click)="openInAppBrowser()">Track the URL</ion-button>
 </ion-content>
